Criação e desenvolvimento da página de oralidade

--- a/curiosidades.html
+++ b/curiosidades.html
@@ -99,7 +99,7 @@
             <h1 class="curiosidade-title">COMUNICAÇÃO VERBAL</h1>
             <p>A linguagem dos Guarani é tão versátil quanto seus símbolos, tendo expressões que possuem mais de um sentido e que pode ser aplicada em diversos contextos.</p>
             <p>Mais detalhes sobre os porquês de cada parte da oralidade Guarani e tabelas com traduções de expressões podem ser encontradas ao clicar no botão abaixo:</p>
-            <a href="simbolos.html" class="a-container"><input type="submit" class="green-btn" value="Mais detalhes"></a>
+            <a href="oralidade.html" class="a-container"><input type="submit" class="green-btn" value="Mais detalhes"></a>
         </div>
     </section>
 
