--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <h3>CONTAR COM AS MÃOS</h3>
                         </div>
                         <p class="card-caroussel-p">Entenda como os Guarani entendem a contagem com as mãos e os porquês de seu modo de visualizar quantidades</p>
-                        <a href="#" class="card-caroussel-btn">Entender</a>
+                        <button onclick="scrollToHand()" class="card-caroussel-btn" id="hand-caroussel-btn" title="Quero saber mais">Quero saber mais</button>
                     </div>
                 </div>
                 <div class="caroussel-item over2">
@@ -188,7 +188,7 @@
                 <h2>Mais do que números</h2>
                 <p>O sistema de contagem guarani tem raízes muito mais profundas do que simplesmente números. Ele também tem importância para a gramática e comunicação diária do povo Guarani, podendo ser usado em práticas religiosas, culturais e até mesmo simplesmente para a comunicação diária.</p>
                 <p>Saiba mais clicando no botão abaixo!</p>
-                <a href="linguagem-oral.html" class="a-container"><input type="submit" class="green-btn" value="Saiba mais"></a>
+                <a href="oralidade.html" class="a-container"><input type="submit" class="green-btn" value="Saiba mais"></a>
             </div>
             <picture class="guarani-info-picture">
                 <img src="src/cesto-guarani.png" alt="Foto de Cesto Guarani">
@@ -238,7 +238,7 @@
                 <div class="info-card-sistema yellow-card">
                     <p>Na escrita guarani, há uma variedade de símbolos com significados e histórias distintas!</p>
                     <p>Clique abaixo para saber mais!</p>
-                    <input type="submit" class="sistema-info-btn" value="Mais Detalhes">
+                    <input type="submit" class="sistema-info-btn green-btn" value="Mais Detalhes">
                 </div>
             </div>
         </div>
