--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li class="nav-item"><a href="curiosidades.html">Curiosidades</a></li>
                 <li class="nav-item"><a href="simbolos.html">Símbolos</a></li>
                 <li class="nav-item"><a href="oralidade.html">Oralidade</a></li>
-                <li class="nav-item"><a href="#">Vídeos</a></li>
+                <li class="nav-item"><a href="sobre.html">Sobre</a></li>
             </ul>
         </div>
     </nav>
@@ -286,7 +286,7 @@
             <img src="src/nav-logo.png" alt="Logo do Sistema de Contagem Guarani">
         </div>
         <ul class="footer-items">
-            <li>Fontes</li>
+            <a href="referencias.html" class="footer-link"><li>Fontes</li></a>
             <li>Institucional</li>
             <li>Contato</li>
             <li>Vídeos</li>
