Conserto do botão da home page e  adição do target blank nas referencias

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                 <div class="info-card-sistema yellow-card">
                     <p>Na escrita guarani, há uma variedade de símbolos com significados e histórias distintas!</p>
                     <p>Clique abaixo para saber mais!</p>
-                    <input type="submit" class="sistema-info-btn green-btn" value="Mais Detalhes">
+                    <a href="simbolos.html" class="a-container"><input type="submit" class="green-btn" value="Mais detalhes"></a>
                 </div>
             </div>
         </div>
