--- a/referencias.html
+++ b/referencias.html
@@ -31,32 +31,32 @@
         <div class="referencias-links">
             <div class="link-container">
                 <h2 class="ref-title">Research Gate:</h2>
-                <a href="https://www.researchgate.net/figure/Figura-2-Mapa-com-territorio-original-Guarani-e-em-destaque-a-localizacao-atual-do_fig2_314303535" class="square-img"><img src="src/guarani-map.png" class="img-ref"></a>
+                <a href="https://www.researchgate.net/figure/Figura-2-Mapa-com-territorio-original-Guarani-e-em-destaque-a-localizacao-atual-do_fig2_314303535" class="square-img" target="_blank"><img src="src/guarani-map.png" class="img-ref"></a>
             </div>
 
             <div class="link-container">
                 <h2 class="ref-title">Sérgio Florentino da Silva:</h2>
-                <a href="https://repositorio.ufsc.br/xmlui/handle/123456789/96063" class="square-img"><img src="src/artigo.png" class="img-ref"></a>
+                <a href="https://repositorio.ufsc.br/xmlui/handle/123456789/96063" class="square-img" target="_blank"><img src="src/artigo.png" class="img-ref"></a>
             </div>
 
             <div class="link-container">
                 <h2 class="ref-title">Amazonas Direito:</h2>
-                <a href="https://www.amazonasdireito.com.br/extremo-oeste-do-amazonas-tera-casamento-coletivo-de-indigenas-nesta-terca-feira/" class="square-img"><img src="src/guarani-dance.png" class="img-ref"></a>
+                <a href="https://www.amazonasdireito.com.br/extremo-oeste-do-amazonas-tera-casamento-coletivo-de-indigenas-nesta-terca-feira/" class="square-img" target="_blank"><img src="src/guarani-dance.png" class="img-ref"></a>
             </div>
 
             <div class="link-container">
                 <h2 class="ref-title">Survival Brasil:</h2>
-                <a href="https://www.survivalbrasil.org/ultimas-noticias/11661"><img src="src/lider-borda.png" class="img-ref"></a>
+                <a href="https://www.survivalbrasil.org/ultimas-noticias/11661" target="_blank"><img src="src/lider-borda.png" class="img-ref"></a>
             </div>
 
             <div class="link-container">
                 <h2 class="ref-title">Jejyty:</h2>
-                <a href="https://jejyty.com.br/produto/ajaka-kora-i-cesto-retangular/"><img src="src/cesto-borda.png" class="img-ref"></a>
+                <a href="https://jejyty.com.br/produto/ajaka-kora-i-cesto-retangular/" target="_blank"><img src="src/cesto-borda.png" class="img-ref"></a>
             </div>
 
             <div class="link-container">
                 <h2 class="ref-title">Permacultura Paraná:</h2>
-                <a href="https://www.facebook.com/permaculturaparana/photos/safra-2016-de-milho-guarani-avati-ete-colhida-na-estação-de-permacultura-manduri/1039773009435692/"><img src="src/milho-borda.png" class="img-ref"></a>
+                <a href="https://www.facebook.com/permaculturaparana/photos/safra-2016-de-milho-guarani-avati-ete-colhida-na-estação-de-permacultura-manduri/1039773009435692/" target="_blank"><img src="src/milho-borda.png" class="img-ref"></a>
             </div>
         </div>
 
