--- a/curiosidades.html
+++ b/curiosidades.html
@@ -9,20 +9,25 @@
     <title>Curiosidades</title>
 </head>
 <body>
-    <!-- NAVBAR -->
-    <nav class="nav-container">
+     <!-- NAVBAR -->
+     <nav class="nav-container">
         <a href="index.html" class="nav-logo">
             <img src="src/nav-logo.png" alt="Logo do Sistema de Contagem Guarani">
         </a>
-        <div class="nav-items">
+        <div class="nav-toggle" id="nav-toggle">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
+        <div class="nav-items" id="nav-items">
             <ul>
-                <li class="nav-item"><a href="index.html">Página Inicial</a></li>
+                <li class="nav-item"><a href="curiosidades.html">Curiosidades</a></li>
                 <li class="nav-item"><a href="simbolos.html">Símbolos</a></li>
                 <li class="nav-item"><a href="oralidade.html">Oralidade</a></li>
                 <li class="nav-item"><a href="sobre.html">Sobre</a></li>
             </ul>
         </div>
-    </nav>
+    </nav>   
 
     <!-- PRIMEIRA SECTION - INTRODUÇÃO ÀS CURIOSIDADES -->
     <section class="curiosidades-page img-background primal-background">
@@ -108,10 +113,7 @@
     <!-- TERCEIRA SECTION - VÍDEO DE CURIOSIDADES -->
     <section class="curiosidades-video-page img-background patch-background">
         <h1 class="curiosidades-video-title">Saiba mais: Contando com as mãos?</h1>
-        <video width="auto" height="500" controls class="curiosidades-video">
-            <source src="src/videos/contando-com-maos.mp4" type="video/mp4">
-            Seu navegador não suporta essa formato de vídeo.
-        </video>
+        <iframe class="curiosidades-video" src="https://www.youtube.com/embed/eJ5f1E6ysg0?si=cSQHib9h6-Sk1fz6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <button onclick="topFunction()" class="green-btn voltar-topo-btn" title="Voltar ao topo">Voltar ao topo ▲</button>
     </section>
 
@@ -121,10 +123,9 @@
             <img src="src/nav-logo.png" alt="Logo do Sistema de Contagem Guarani">
         </div>
         <ul class="footer-items">
+            <a href="index.html" class="footer-link"><li>Início</li></a>
             <a href="referencias.html" class="footer-link"><li>Fontes</li></a>
-            <li>Institucional</li>
-            <li>Contato</li>
-            <li>Vídeos</li>
+            <a href="sobre.html" class="footer-link"><li>Sobre</li></a>
         </ul>
         <div class="footer-college-logos">
             <img src="src/logo-usp-pequena.png" alt="Logo USP">
@@ -142,5 +143,16 @@
         new window.VLibras.Widget('https://vlibras.gov.br/app');
     </script>
     <script src="script.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            const navToggle = document.querySelector('.nav-toggle');
+            const navItems = document.querySelector('.nav-items');
+        
+            navToggle.addEventListener('click', function() {
+                navToggle.classList.toggle('active');
+                navItems.classList.toggle('active');
+            });
+        });
+    </script>
 </body>
 </html>
