--- a/simbolos.html
+++ b/simbolos.html
@@ -14,10 +14,15 @@
         <a href="index.html" class="nav-logo">
             <img src="src/nav-logo.png" alt="Logo do Sistema de Contagem Guarani">
         </a>
-        <div class="nav-items">
+        <div class="nav-toggle" id="nav-toggle">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
+        <div class="nav-items" id="nav-items">
             <ul>
-                <li class="nav-item"><a href="index.html">Página Inicial</a></li>
                 <li class="nav-item"><a href="curiosidades.html">Curiosidades</a></li>
+                <li class="nav-item"><a href="simbolos.html">Símbolos</a></li>
                 <li class="nav-item"><a href="oralidade.html">Oralidade</a></li>
                 <li class="nav-item"><a href="sobre.html">Sobre</a></li>
             </ul>
@@ -1596,10 +1601,9 @@
             <img src="src/nav-logo.png" alt="Logo do Sistema de Contagem Guarani">
         </div>
         <ul class="footer-items">
+            <a href="index.html" class="footer-link"><li>Início</li></a>
             <a href="referencias.html" class="footer-link"><li>Fontes</li></a>
-            <li>Institucional</li>
-            <li>Contato</li>
-            <li>Vídeos</li>
+            <a href="sobre.html" class="footer-link"><li>Sobre</li></a>
         </ul>
         <div class="footer-college-logos">
             <img src="src/logo-usp-pequena.png" alt="Logo USP">
