Expansão de Responsividade do Site

--- a/index.html
+++ b/index.html
@@ -148,19 +148,19 @@
             <h1 class="leaf-title">Saber mais sobre a história é aprender<br>com o passado</h1>
         </div>
         <form action="#" class="form-info">
-            <label class="info-control active">
+            <label class="info-control active origem-control">
                 <input type="radio" name="select-info" value="origem" checked="checked"/>
                 Origem
             </label>
-            <label class="info-control">
+            <label class="info-control visibilidade-control">
                 <input type="radio" name="select-info" value="visibilidade"/>
                 Visibilidade
             </label>
-            <label class="info-control">
+            <label class="info-control" id="oral-control">
                 <input type="radio" name="select-info" value="linguagem"/>
                 Linguagem Oral
             </label>
-            <label class="info-control">
+            <label class="info-control preserv-control">
                 <input type="radio" name="select-info" value="preservacao"/>
                 Preservação
             </label>
