Correção de texto na página inicial

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     
                 <!-- CAIXA COM DESCRIÇÃO -->
                 <div class="wood-box bg-wood">
-                    <p class="wood-box-text">Entenda como o as raízes do povo guarani tiveram influência na história da computação</p>
+                    <p class="wood-box-text">Entenda como as raízes do povo guarani tiveram influência na história da computação</p>
                 </div>
     
                 <!-- BOTÃO DE MADEIRA -->
